# gldf-sign

./: Cargo.toml  README
.github/workflows/: release.yml  rust.yml
src/: gldf_helper.rs  helpers.rs  main.rs  parse_args.rs
tests/data/: test.gldf  test.gldf.minisig
